draftP5/specLang_draftP4Parser.py
# Generated from specLang_draftP4Parser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class specLang_draftP4Parser ( Parser ):

    grammarFileName = "specLang_draftP4Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'('", "<INVALID>", 
                     "'BEGIN'", "'MESSAGE'", "'LABEL'", "'TITLE'", "'FIND'", 
                     "'WHERE'", "'WITHIN'", "<INVALID>", "'IF'", "'NOT'", 
                     "'FOUND'", "'GENTLE'", "'GIVE'", "'NO'", "'FEEDBACK'", 
                     "'END'", "'ELSE'", "'WITHOUT'", "'WITH'", "'AS'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "')'", "<INVALID>", "','" ]

    symbolicNames = [ "<INVALID>", "OPEN_COMMENT", "OPEN_CODE", "OPEN_PARENS", 
                      "WHITESPACE", "BEGIN", "MESSAGE", "LABEL", "TITLE", 
                      "FIND", "WHERE", "WITHIN", "EXPRESSION", "IF", "NOT", 
                      "FOUND", "GENTLE", "GIVE", "NO", "FEEDBACK", "END", 
                      "ELSE", "WITHOUT", "WITH", "AS", "NAME", "CLOSE_CODE", 
                      "CODE_TEXT", "CLOSE_COMMENT", "COMMENT_TEXT", "CLOSE_PARENS", 
                      "OPEN_CODE_IN_PARENS", "COMMA", "PARENS_TEXT", "WHITESPACE_PARENS" ]

    RULE_document = 0
    RULE_statement = 1
    RULE_comment = 2
    RULE_beginpart = 3
    RULE_messagespart = 4
    RULE_messagepart = 5
    RULE_labelpart = 6
    RULE_titlepart = 7
    RULE_findpart = 8
    RULE_findclause = 9
    RULE_whereclause = 10
    RULE_withinclause = 11
    RULE_ifclause = 12
    RULE_elsepart = 13
    RULE_feedbackpart = 14
    RULE_feedbackparenspart = 15
    RULE_endpart = 16

    ruleNames =  [ "document", "statement", "comment", "beginpart", "messagespart", 
                   "messagepart", "labelpart", "titlepart", "findpart", 
                   "findclause", "whereclause", "withinclause", "ifclause", 
                   "elsepart", "feedbackpart", "feedbackparenspart", "endpart" ]

    EOF = Token.EOF
    OPEN_COMMENT=1
    OPEN_CODE=2
    OPEN_PARENS=3
    WHITESPACE=4
    BEGIN=5
    MESSAGE=6
    LABEL=7
    TITLE=8
    FIND=9
    WHERE=10
    WITHIN=11
    EXPRESSION=12
    IF=13
    NOT=14
    FOUND=15
    GENTLE=16
    GIVE=17
    NO=18
    FEEDBACK=19
    END=20
    ELSE=21
    WITHOUT=22
    WITH=23
    AS=24
    NAME=25
    CLOSE_CODE=26
    CODE_TEXT=27
    CLOSE_COMMENT=28
    COMMENT_TEXT=29
    CLOSE_PARENS=30
    OPEN_CODE_IN_PARENS=31
    COMMA=32
    PARENS_TEXT=33
    WHITESPACE_PARENS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(specLang_draftP4Parser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(specLang_draftP4Parser.StatementContext)
            else:
                return self.getTypedRuleContext(specLang_draftP4Parser.StatementContext,i)


        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)




    def document(self):

        localctx = specLang_draftP4Parser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self.statement()
                self.state = 37 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==specLang_draftP4Parser.OPEN_COMMENT or _la==specLang_draftP4Parser.BEGIN):
                    break

            self.state = 39
            self.match(specLang_draftP4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def beginpart(self):
            return self.getTypedRuleContext(specLang_draftP4Parser.BeginpartContext,0)


        def messagespart(self):
            return self.getTypedRuleContext(specLang_draftP4Parser.MessagespartContext,0)


        def findpart(self):
            return self.getTypedRuleContext(specLang_draftP4Parser.FindpartContext,0)


        def endpart(self):
            return self.getTypedRuleContext(specLang_draftP4Parser.EndpartContext,0)


        def comment(self):
            return self.getTypedRuleContext(specLang_draftP4Parser.CommentContext,0)


        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = specLang_draftP4Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [specLang_draftP4Parser.BEGIN]:
                self.state = 41
                self.beginpart()
                self.state = 42
                self.messagespart()
                self.state = 43
                self.findpart()
                self.state = 44
                self.endpart()
                pass
            elif token in [specLang_draftP4Parser.OPEN_COMMENT]:
                self.state = 46
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_COMMENT(self):
            return self.getToken(specLang_draftP4Parser.OPEN_COMMENT, 0)

        def COMMENT_TEXT(self):
            return self.getToken(specLang_draftP4Parser.COMMENT_TEXT, 0)

        def CLOSE_COMMENT(self):
            return self.getToken(specLang_draftP4Parser.CLOSE_COMMENT, 0)

        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = specLang_draftP4Parser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(specLang_draftP4Parser.OPEN_COMMENT)
            self.state = 50
            self.match(specLang_draftP4Parser.COMMENT_TEXT)
            self.state = 51
            self.match(specLang_draftP4Parser.CLOSE_COMMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeginpartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(specLang_draftP4Parser.BEGIN, 0)

        def NAME(self):
            return self.getToken(specLang_draftP4Parser.NAME, 0)

        def OPEN_PARENS(self):
            return self.getToken(specLang_draftP4Parser.OPEN_PARENS, 0)

        def CLOSE_PARENS(self):
            return self.getToken(specLang_draftP4Parser.CLOSE_PARENS, 0)

        def PARENS_TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draftP4Parser.PARENS_TEXT)
            else:
                return self.getToken(specLang_draftP4Parser.PARENS_TEXT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draftP4Parser.COMMA)
            else:
                return self.getToken(specLang_draftP4Parser.COMMA, i)

        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_beginpart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBeginpart" ):
                listener.enterBeginpart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBeginpart" ):
                listener.exitBeginpart(self)




    def beginpart(self):

        localctx = specLang_draftP4Parser.BeginpartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_beginpart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(specLang_draftP4Parser.BEGIN)
            self.state = 54
            self.match(specLang_draftP4Parser.NAME)
            self.state = 55
            self.match(specLang_draftP4Parser.OPEN_PARENS)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==specLang_draftP4Parser.PARENS_TEXT:
                self.state = 56
                self.match(specLang_draftP4Parser.PARENS_TEXT)


            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==specLang_draftP4Parser.COMMA:
                self.state = 59
                self.match(specLang_draftP4Parser.COMMA)
                self.state = 60
                self.match(specLang_draftP4Parser.PARENS_TEXT)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(specLang_draftP4Parser.CLOSE_PARENS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MessagespartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def messagepart(self):
            return self.getTypedRuleContext(specLang_draftP4Parser.MessagepartContext,0)


        def labelpart(self):
            return self.getTypedRuleContext(specLang_draftP4Parser.LabelpartContext,0)


        def titlepart(self):
            return self.getTypedRuleContext(specLang_draftP4Parser.TitlepartContext,0)


        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_messagespart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMessagespart" ):
                listener.enterMessagespart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMessagespart" ):
                listener.exitMessagespart(self)




    def messagespart(self):

        localctx = specLang_draftP4Parser.MessagespartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_messagespart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.messagepart()
            self.state = 69
            self.labelpart()
            self.state = 70
            self.titlepart()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MessagepartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MESSAGE(self):
            return self.getToken(specLang_draftP4Parser.MESSAGE, 0)

        def OPEN_CODE(self):
            return self.getToken(specLang_draftP4Parser.OPEN_CODE, 0)

        def CODE_TEXT(self):
            return self.getToken(specLang_draftP4Parser.CODE_TEXT, 0)

        def CLOSE_CODE(self):
            return self.getToken(specLang_draftP4Parser.CLOSE_CODE, 0)

        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_messagepart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMessagepart" ):
                listener.enterMessagepart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMessagepart" ):
                listener.exitMessagepart(self)




    def messagepart(self):

        localctx = specLang_draftP4Parser.MessagepartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_messagepart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(specLang_draftP4Parser.MESSAGE)
            self.state = 73
            self.match(specLang_draftP4Parser.OPEN_CODE)
            self.state = 74
            self.match(specLang_draftP4Parser.CODE_TEXT)
            self.state = 75
            self.match(specLang_draftP4Parser.CLOSE_CODE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelpartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(specLang_draftP4Parser.LABEL, 0)

        def OPEN_CODE(self):
            return self.getToken(specLang_draftP4Parser.OPEN_CODE, 0)

        def CODE_TEXT(self):
            return self.getToken(specLang_draftP4Parser.CODE_TEXT, 0)

        def CLOSE_CODE(self):
            return self.getToken(specLang_draftP4Parser.CLOSE_CODE, 0)

        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_labelpart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabelpart" ):
                listener.enterLabelpart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabelpart" ):
                listener.exitLabelpart(self)




    def labelpart(self):

        localctx = specLang_draftP4Parser.LabelpartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_labelpart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(specLang_draftP4Parser.LABEL)
            self.state = 78
            self.match(specLang_draftP4Parser.OPEN_CODE)
            self.state = 79
            self.match(specLang_draftP4Parser.CODE_TEXT)
            self.state = 80
            self.match(specLang_draftP4Parser.CLOSE_CODE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TitlepartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TITLE(self):
            return self.getToken(specLang_draftP4Parser.TITLE, 0)

        def OPEN_CODE(self):
            return self.getToken(specLang_draftP4Parser.OPEN_CODE, 0)

        def CODE_TEXT(self):
            return self.getToken(specLang_draftP4Parser.CODE_TEXT, 0)

        def CLOSE_CODE(self):
            return self.getToken(specLang_draftP4Parser.CLOSE_CODE, 0)

        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_titlepart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTitlepart" ):
                listener.enterTitlepart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTitlepart" ):
                listener.exitTitlepart(self)




    def titlepart(self):

        localctx = specLang_draftP4Parser.TitlepartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_titlepart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(specLang_draftP4Parser.TITLE)
            self.state = 83
            self.match(specLang_draftP4Parser.OPEN_CODE)
            self.state = 84
            self.match(specLang_draftP4Parser.CODE_TEXT)
            self.state = 85
            self.match(specLang_draftP4Parser.CLOSE_CODE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FindpartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def findclause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(specLang_draftP4Parser.FindclauseContext)
            else:
                return self.getTypedRuleContext(specLang_draftP4Parser.FindclauseContext,i)


        def whereclause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(specLang_draftP4Parser.WhereclauseContext)
            else:
                return self.getTypedRuleContext(specLang_draftP4Parser.WhereclauseContext,i)


        def withinclause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(specLang_draftP4Parser.WithinclauseContext)
            else:
                return self.getTypedRuleContext(specLang_draftP4Parser.WithinclauseContext,i)


        def ifclause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(specLang_draftP4Parser.IfclauseContext)
            else:
                return self.getTypedRuleContext(specLang_draftP4Parser.IfclauseContext,i)


        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_findpart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFindpart" ):
                listener.enterFindpart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFindpart" ):
                listener.exitFindpart(self)




    def findpart(self):

        localctx = specLang_draftP4Parser.FindpartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_findpart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.findclause()
            self.state = 92 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [specLang_draftP4Parser.WHERE]:
                    self.state = 88
                    self.whereclause()
                    pass
                elif token in [specLang_draftP4Parser.WITHIN]:
                    self.state = 89
                    self.withinclause()
                    pass
                elif token in [specLang_draftP4Parser.IF]:
                    self.state = 90
                    self.ifclause()
                    pass
                elif token in [specLang_draftP4Parser.FIND]:
                    self.state = 91
                    self.findclause()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 94 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << specLang_draftP4Parser.FIND) | (1 << specLang_draftP4Parser.WHERE) | (1 << specLang_draftP4Parser.WITHIN) | (1 << specLang_draftP4Parser.IF))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FindclauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIND(self):
            return self.getToken(specLang_draftP4Parser.FIND, 0)

        def OPEN_CODE(self):
            return self.getToken(specLang_draftP4Parser.OPEN_CODE, 0)

        def CODE_TEXT(self):
            return self.getToken(specLang_draftP4Parser.CODE_TEXT, 0)

        def CLOSE_CODE(self):
            return self.getToken(specLang_draftP4Parser.CLOSE_CODE, 0)

        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_findclause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFindclause" ):
                listener.enterFindclause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFindclause" ):
                listener.exitFindclause(self)




    def findclause(self):

        localctx = specLang_draftP4Parser.FindclauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_findclause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(specLang_draftP4Parser.FIND)
            self.state = 97
            self.match(specLang_draftP4Parser.OPEN_CODE)
            self.state = 98
            self.match(specLang_draftP4Parser.CODE_TEXT)
            self.state = 99
            self.match(specLang_draftP4Parser.CLOSE_CODE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereclauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(specLang_draftP4Parser.WHERE, 0)

        def OPEN_CODE(self):
            return self.getToken(specLang_draftP4Parser.OPEN_CODE, 0)

        def CODE_TEXT(self):
            return self.getToken(specLang_draftP4Parser.CODE_TEXT, 0)

        def CLOSE_CODE(self):
            return self.getToken(specLang_draftP4Parser.CLOSE_CODE, 0)

        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_whereclause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereclause" ):
                listener.enterWhereclause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereclause" ):
                listener.exitWhereclause(self)




    def whereclause(self):

        localctx = specLang_draftP4Parser.WhereclauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_whereclause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(specLang_draftP4Parser.WHERE)
            self.state = 102
            self.match(specLang_draftP4Parser.OPEN_CODE)
            self.state = 103
            self.match(specLang_draftP4Parser.CODE_TEXT)
            self.state = 104
            self.match(specLang_draftP4Parser.CLOSE_CODE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WithinclauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WITHIN(self):
            return self.getToken(specLang_draftP4Parser.WITHIN, 0)

        def EXPRESSION(self):
            return self.getToken(specLang_draftP4Parser.EXPRESSION, 0)

        def FIND(self):
            return self.getToken(specLang_draftP4Parser.FIND, 0)

        def OPEN_CODE(self):
            return self.getToken(specLang_draftP4Parser.OPEN_CODE, 0)

        def CODE_TEXT(self):
            return self.getToken(specLang_draftP4Parser.CODE_TEXT, 0)

        def CLOSE_CODE(self):
            return self.getToken(specLang_draftP4Parser.CLOSE_CODE, 0)

        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_withinclause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWithinclause" ):
                listener.enterWithinclause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWithinclause" ):
                listener.exitWithinclause(self)




    def withinclause(self):

        localctx = specLang_draftP4Parser.WithinclauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_withinclause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(specLang_draftP4Parser.WITHIN)
            self.state = 107
            self.match(specLang_draftP4Parser.EXPRESSION)
            self.state = 108
            self.match(specLang_draftP4Parser.FIND)
            self.state = 109
            self.match(specLang_draftP4Parser.OPEN_CODE)
            self.state = 110
            self.match(specLang_draftP4Parser.CODE_TEXT)
            self.state = 111
            self.match(specLang_draftP4Parser.CLOSE_CODE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfclauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(specLang_draftP4Parser.IF, 0)

        def FOUND(self):
            return self.getToken(specLang_draftP4Parser.FOUND, 0)

        def feedbackpart(self):
            return self.getTypedRuleContext(specLang_draftP4Parser.FeedbackpartContext,0)


        def NOT(self):
            return self.getToken(specLang_draftP4Parser.NOT, 0)

        def elsepart(self):
            return self.getTypedRuleContext(specLang_draftP4Parser.ElsepartContext,0)


        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_ifclause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfclause" ):
                listener.enterIfclause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfclause" ):
                listener.exitIfclause(self)




    def ifclause(self):

        localctx = specLang_draftP4Parser.IfclauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifclause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(specLang_draftP4Parser.IF)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==specLang_draftP4Parser.NOT:
                self.state = 114
                self.match(specLang_draftP4Parser.NOT)


            self.state = 117
            self.match(specLang_draftP4Parser.FOUND)
            self.state = 118
            self.feedbackpart()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==specLang_draftP4Parser.ELSE:
                self.state = 119
                self.elsepart()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElsepartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(specLang_draftP4Parser.ELSE, 0)

        def feedbackpart(self):
            return self.getTypedRuleContext(specLang_draftP4Parser.FeedbackpartContext,0)


        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_elsepart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElsepart" ):
                listener.enterElsepart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElsepart" ):
                listener.exitElsepart(self)




    def elsepart(self):

        localctx = specLang_draftP4Parser.ElsepartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_elsepart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(specLang_draftP4Parser.ELSE)
            self.state = 123
            self.feedbackpart()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeedbackpartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GIVE(self):
            return self.getToken(specLang_draftP4Parser.GIVE, 0)

        def FEEDBACK(self):
            return self.getToken(specLang_draftP4Parser.FEEDBACK, 0)

        def NO(self):
            return self.getToken(specLang_draftP4Parser.NO, 0)

        def GENTLE(self):
            return self.getToken(specLang_draftP4Parser.GENTLE, 0)

        def OPEN_PARENS(self):
            return self.getToken(specLang_draftP4Parser.OPEN_PARENS, 0)

        def CLOSE_PARENS(self):
            return self.getToken(specLang_draftP4Parser.CLOSE_PARENS, 0)

        def feedbackparenspart(self):
            return self.getTypedRuleContext(specLang_draftP4Parser.FeedbackparenspartContext,0)


        def getRuleIndex(self):
            return specLang_draftP4Parser.RULE_feedbackpart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeedbackpart" ):
                listener.enterFeedbackpart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeedbackpart" ):
                listener.exitFeedbackpart(self)




    def feedbackpart(self):
